--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,9 @@
         <h4>Generate a secure password</h4>
 
         <p id="passwordText"></p>
+        <p id="rangeValue">Password size</p>
 
-        <button id="genBtn">Generate Password</button>
+        <input type="range" min="1" max="16" value="8" class="slider" id="myRange">
     </div>
         <script src="script.js" async defer></script>
     </body>
